--- a/client/templates/layouts/layout.html
+++ b/client/templates/layouts/layout.html
@@ -1,7 +1,8 @@
 <template name="layoutTamplate">
 
     <head>
-        <title>...loading</title>
+        <title>Hero</title>
+        <link rel='icon' href='/favicon.ico'>
         <link href='/css/user_style.css' rel='stylesheet' type='text/css'>
     </head>
     <div id="main">
