--- a/client/templates/home/noticiaspage.html
+++ b/client/templates/home/noticiaspage.html
@@ -8,7 +8,7 @@
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     {{#each noticiasBanner}}
-                        <li data-target="#myCarousel" data-slide-to="{{index}}"></li>
+                        <li class="indicadores" data-target="#myCarousel" data-slide-to="{{index}}"></li>
                     {{/each}}
                 </ol>
                 <div class="carousel-inner">
