--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -51,9 +51,7 @@
                     </div>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <button type="button" class="btn btn-admin btn-lg" data-toggle="modal"
-                                data-target="#myModal"><i
-                                class="fa fa-gears"></i>
+                        <button type="button" class="btn btn-admin btn-lg" onclick="location.href='/admin';"><i class="fa fa-gears"></i>
                         </button>
                     </ul>
 
