--- a/client/templates/layouts/adminlayout.html
+++ b/client/templates/layouts/adminlayout.html
@@ -1,5 +1,17 @@
 <template name="adminLayoutTamplate">
 
+    <head>
+        <title>Administrador</title>
+
+        <link href='/css/admin_style.css' rel='stylesheet' type='text/css'>
+        <link href='/css/all_skins.css' rel='stylesheet' type='text/css'>
+        <link href="/css/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
+
+        <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
+        <script type="text/javascript" src="/ckeditor/adapters/jquery.js"></script>
+
+    </head>
+
     <div id="main" class="hold-transition skin-blue layout-boxed sidebar-mini">
         <div class="wrapper">
 
