--- a/client/templates/home/noticiaspage.html
+++ b/client/templates/home/noticiaspage.html
@@ -76,6 +76,11 @@
                                                   aria-hidden="true"></span>{{date}}
                                         </li>
                                     </ul>
+
+                                    <script type="text/javascript">
+                                        console.log("Tempo de script: "+ performance.now());
+                                    </script>
+
                                 </div>
                             </div>
                         </div>
