--- a/client/templates/home/noticiapage.html
+++ b/client/templates/home/noticiapage.html
@@ -154,6 +154,9 @@
             </div>
         </div>
 
+        <script type="text/javascript">
+            endTime();
+        </script>
 
     </div>
 
