--- a/client/templates/home/noticiapage.html
+++ b/client/templates/home/noticiapage.html
@@ -44,7 +44,7 @@
                                     </a>
                                     </li>
                                     <li><a href="#"><span class="glyphicon glyphicon-comment"
-                                                          aria-hidden="true"></span>{{comentarios.length}}
+                                                          aria-hidden="true"></span>{{comments.length}}
                                     </a>
                                     </li>
                                     <li><span class="glyphicon glyphicon-eye-open"
