--- a/client/templates/home/noticiaspage.html
+++ b/client/templates/home/noticiaspage.html
@@ -61,7 +61,7 @@
                                                 aria-hidden="true"></span>{{nao_gostei}} </a>
                                         </li>
                                         <li><a href="#"><span class="glyphicon glyphicon-comment"
-                                                              aria-hidden="true"></span>{{comentarios.length}}</a>
+                                                              aria-hidden="true"></span>{{comments.length}}</a>
                                         </li>
                                         <li><span class="glyphicon glyphicon-eye-open"
                                                   aria-hidden="true"></span> {{numero_clicks}}
