--- a/client/templates/home/noticiaspage.html
+++ b/client/templates/home/noticiaspage.html
@@ -72,6 +72,7 @@
                                     </ul>
                                     <script type="text/javascript">
                                         console.log("Tempo de carregamento: "+ performance.now());
+                                        endTime();
                                     </script>
                                 </div>
                             </div>
